--- a/package.json
+++ b/package.json
@@ -1,73 +1,87 @@
 {
-  "name": "motoApp",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "start": "ionic-app-scripts serve",
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
-  },
-  "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.12.0",
-    "@ionic-native/date-picker": "^4.12.2",
-    "@ionic-native/facebook": "^4.12.2",
-    "@ionic-native/firebase": "^4.12.2",
-    "@ionic-native/splash-screen": "~4.12.0",
-    "@ionic-native/status-bar": "~4.12.0",
-    "@ionic/pro": "2.0.3",
-    "@ionic/storage": "2.1.3",
-    "angularfire2": "^5.0.0-rc.12",
-    "cordova-android": "7.0.0",
-    "cordova-plugin-datepicker": "^0.9.3",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "^2.3.0",
-    "cordova-plugin-firebase": "^1.1.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.0",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "^5.4.2",
-    "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
-    "typescript": "~2.6.2"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-firebase": {},
-      "cordova-plugin-facebook4": {
-        "APP_ID": "724211927937098",
-        "APP_NAME": "MotoApp"
-      },
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-datepicker": {}
+    "name": "motoApp",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "start": "ionic-app-scripts serve",
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint"
     },
-    "platforms": [
-      "android"
-    ]
-  }
+    "dependencies": {
+        "@angular/animations": "5.2.11",
+        "@angular/common": "5.2.11",
+        "@angular/compiler": "5.2.11",
+        "@angular/compiler-cli": "5.2.11",
+        "@angular/core": "5.2.11",
+        "@angular/fire": "^5.0.0",
+        "@angular/forms": "5.2.11",
+        "@angular/http": "5.2.11",
+        "@angular/platform-browser": "5.2.11",
+        "@angular/platform-browser-dynamic": "5.2.11",
+        "@ionic-native/core": "~4.12.0",
+        "@ionic-native/facebook": "^4.12.2",
+        "@ionic-native/firebase": "^4.12.2",
+        "@ionic-native/splash-screen": "~4.12.0",
+        "@ionic-native/status-bar": "~4.12.0",
+        "@ionic/pro": "2.0.3",
+        "@ionic/storage": "2.1.3",
+        "cordova-android": "7.0.0",
+        "cordova-plugin-accountkit": "^1.4.0",
+        "cordova-plugin-datepicker": "^0.9.3",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-facebook4": "^2.3.0",
+        "cordova-plugin-firebase": "^2.0.0",
+        "cordova-plugin-firebase-authentication": "^1.0.1",
+        "cordova-plugin-ionic": "^5.0.0",
+        "cordova-plugin-ionic-keyboard": "^2.1.2",
+        "cordova-plugin-ionic-webview": "^2.1.0",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-support-android-plugin": "^1.0.1",
+        "cordova-support-google-services": "^1.2.1",
+        "firebase": "^5.5.0",
+        "ionic-angular": "3.9.2",
+        "ionicons": "3.0.0",
+        "rxjs": "5.5.11",
+        "save": "^2.3.2",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.26"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.2.0",
+        "typescript": "~2.6.2"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-firebase": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "724211927937098",
+                "APP_NAME": "MotoApp"
+            },
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-datepicker": {},
+            "cordova-plugin-firebase-authentication": {
+                "FIREBASE_AUTH_VERSION": "16.0.+"
+            },
+            "cordova-plugin-accountkit": {
+                "APP_ID": "724211927937098",
+                "APP_NAME": "MotoApp",
+                "CLIENT_TOKEN": "14d5d16c8592570a27535b5b2b7f25c6",
+                "API_VERSION": "v1.1"
+            }
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
